# lxml_html_clean

./: .gitignore  .readthedocs.yaml  CHANGES.rst  MANIFEST.in  README.md  USAGE.rst  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: main.yml
docs/: conf.py  index.rst  lxml_html_clean.rst  modules.rst  requirements.txt  usage.rst
lxml_html_clean/: clean.py
tests/: test_autolink.txt  test_clean.py  test_clean.txt  test_clean_embed.txt  utils.py
