[metadata]
name = lxml_html_clean
version = 0.4.3
description = HTML cleaner from lxml project
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/fedora-python/lxml_html_clean/
project_urls =
    Documentation = https://lxml-html-clean.readthedocs.io/
author = Lumír Balhar
author_email = lbalhar@redhat.com
license = BSD-3-Clause
license_files = LICENSE.txt
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14

[options]
packages =
    lxml_html_clean
install_requires =
    lxml
